# avplumber

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  generate_node_list
.devcontainer/: Dockerfile  devcontainer.json
doc/: developing_nodes.md
examples/: complicated_transcoder.avplumber  extract_cc_data.avplumber  extract_scte_35.avplumber  generate_multiaudio_graph.sh  multi_video_player.avplumber  multiaudio.avplumber  nns.avplumber  nns_raw.avplumber  remux_analyze_audio.avplumber  remux_with_statistics.avplumber  simple_audio_transcoder.avplumber  video_player.avplumber  video_recorder.avplumber
examples/compose/: rtmp_test_source.yml
library_examples/obs-avplumber-source/: CMakeLists.txt  README.md  avplumber-source.cpp
library_examples/obs-avplumber-source/examples/: rtmp_input.txt  rtmp_input_hw_dec_cuda.txt
library_examples/obs-avplumber-source/obs_patches/: add_avplumber_plugin.patch  hwaccel_async_sources.patch
src/: Event.hpp  EventLoop.cpp  EventLoop.hpp  InputSeekTeam.hpp  InterruptibleReader.hpp  JackClient.hpp  MultiEventWait.hpp  PauseControlTeam.hpp  RealTimeTeam.hpp  RingBuffer.hpp  SpeedControlTeam.hpp  TickSource.cpp  TickSource.hpp  app_version.cpp  app_version.hpp  audio_parameters.hpp  avplumber.cpp  avplumber.hpp  avutils.cpp  avutils.hpp  bitstream_filter.cpp  cuda.cpp  cuda.hpp  edge_meta_utils.hpp  graph_base.hpp  graph_core.cpp  graph_core.hpp  graph_factory.hpp  graph_interfaces.hpp  graph_mgmt.cpp  graph_mgmt.hpp  hwaccel.hpp  hwaccel_mgmt.cpp  hwaccel_mgmt.hpp  instance.hpp  instance_shared.cpp  instance_shared.hpp  logger_impls.hpp  main.cpp  named_event.hpp  (+12 more)
(+38 files in other folders)
